Bug 92470 - FILESAVE: Footnotes per page not recognized in .DOCX
Summary: FILESAVE: Footnotes per page not recognized in .DOCX
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
3.3.0 release
Hardware: All All
: medium normal
Assignee: Justin L
URL:
Whiteboard: target:5.4.0 target:5.3.1
Keywords: filter:docx
Depends on:
Blocks: DOCX
  Show dependency treegraph
 
Reported: 2015-07-01 06:49 UTC by bernie
Modified: 2017-05-18 17:23 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Sample ODT file (10.97 KB, application/vnd.oasis.opendocument.text)
2015-07-01 17:07 UTC, bernie
Details

Note You need to log in before you can comment on or make changes to this bug.
Description bernie 2015-07-01 06:49:23 UTC
When opening a document that was net to restart footnote numbering on each page, if the document is saved as a DOCK then it reverts to continuous numbering.  If the document was saved as an ODT document then it opens correctly and footnote numbering is, correctly, per page.

"Per Page" footnote numbering is net under the Tools menu item.  The problem is easily reproduced by inserting any footnote on page 1 and on page 2 of a document and saving the document.  In an ODT document numbering will be start with 1 on each page when the file is reopened.  But when reopening a DOCK document, footnote numbering will continue from the previous page.
Comment 1 tommy27 2015-07-01 08:38:46 UTC
please upload a test .ODT file with such numbering so we can exactly retest your same scenario saving it to .DOCX
Comment 2 bernie 2015-07-01 17:07:27 UTC
Created attachment 116974 [details]
Sample ODT file

Works correctly with "per page" footnote numbering as an ODT file, but opens with continuous footnote numbering if saved and re-opened as a DOCX file.
Comment 3 Timur 2015-07-01 17:42:33 UTC
Reproduced up to 5.0, this never worked fine.

Steps:
- set "Per Page" footnote numbering in Writer (under the Tools)
- create 2 footnotes on 2 pages
- save as DOCX
- reopen DOCX

Expected: footnotes start from 1 on each page
Reproduced: footnotes continue from the previous page

Saving to DOC works fine, DOCX problem only.
Comment 4 Robinson Tryon (qubit) 2015-12-09 18:44:52 UTC Comment hidden (no-value, obsolete)
Comment 5 Timur 2017-01-06 15:43:42 UTC
Justin, since you are fresh from Bug 43370 I cc you here to take a look, if you could. Thank you.
Comment 6 Justin L 2017-01-16 15:23:29 UTC
(In reply to Timur from comment #3)
> Saving to DOC works fine, DOCX problem only.
Saving to DOC seems fine when round-tripping in LibreOffice, but in MSWord 2003/2013 it is treated as document numbering for some reason.

I think DOCX doesn't even attempts to export FTNNUM_*
Comment 7 Justin L 2017-01-16 19:08:59 UTC
proposed fix for docx export: https://gerrit.libreoffice.org/33183
Comment 8 Justin L 2017-01-17 06:46:32 UTC
created bug 105381 for continuous numbering in DOC format (for MSWord only)
Comment 9 Commit Notification 2017-01-18 04:45:04 UTC
Justin Luth committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=34d32031ed2ab1969377abbc91981a056fe375b7

tdf#92470 docxexport: add support for XML_numRestart

It will be available in 5.4.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 Commit Notification 2017-01-19 08:36:48 UTC
Justin Luth committed a patch related to this issue.
It has been pushed to "libreoffice-5-3":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=ad08abd824e28f2f166a231635db9f4ac1a68eae&h=libreoffice-5-3

tdf#92470 docxexport: add support for XML_numRestart

It will be available in 5.3.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 11 Timur 2017-01-19 08:39:18 UTC
I guess it's fixed, tested with master.
Comment 12 Timur 2017-01-19 09:44:20 UTC
With all the due respect, this is "Just the INstoppable fix machine" :)
Comment 13 tommy27 2017-01-19 10:23:46 UTC
yes. Justin is doing great things!!! fixing many old bugs is very appreciated!!!