tdf#92470 docxexport: add support for XML_numRestart

Although import handled whether footnote numbering restarted
every page, chapter(section) or document, that information
was not being exported in docx.

Change-Id: If9e0a1d53c8610b18b949fd918c5dd7d7bd94682